--- a/style.css
+++ b/style.css
@@ -8,7 +8,27 @@
     font-weight: 500;
     font-style: normal; 
 }
-    
+
+/* Header */
+header {
+    color: black;
+    margin: 0;
+    padding: 2em;
+    text-align: end; 
+    flex-grow: 1;  /* header covers all space */ 
+    /*position: fixed;*/  
+    width: 100%;
+    display: block;
+    background-color: #d6423d;
+    /*background-image: url('img/img-betterweb.jpg');*/
+    /*background-size: cover; /* Adjust image size to cover the element */
+    /*background-position: center; /* Center the image */
+    /*background-repeat: no-repeat; /* Prevent the image from repeating */
+}
+header p {
+    font-size: large;
+}
+
 /* Body */
 body {
     margin: 0;
@@ -16,30 +36,30 @@ body {
     line-height: 1.6; 
 }
 
-/* Header */
-header {
-    background: #9c5858;
-    color: white;
-    padding: 2em;
-    text-align: center; 
-    flex-grow: 1;  /* header covers all space */ 
-    /*position: fixed;*/  
-    width: 100%;
-    display: block;
-}
-header p {
-    font-size: large;
-}
-
 /* Main */
 main {
     padding: 20px;
-    display: flex; /* Using flex ro manage layout */
+    display: flex; /* Using flex to manage layout */
     width: 100%;
     height: 100vh;  /* height for full page */
 }
+.about-web img {
+    width: 800px;
+    height: 400px;
+    margin-bottom: 2.5em;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+.about-web {
+    line-height: 3em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5em;
+    margin-right: 5em;
+}
 section {
-    padding-top: 2em;
+    padding-top: 1em;
 }
 .section-container {
     flex: 2; /* flex box 2 */
@@ -49,8 +69,8 @@ section {
     box-sizing: border-box; /* the size doesn't change when padding/border are added */  
     margin-left: 18em;
 }
-.side-nav {
-    width: 250px;  /* width of menu */
+.side-nav { /* Left menu */
+    width: 250px;  
     background-color: #333;  
     color: white;
     font-size: x-large;
@@ -65,19 +85,61 @@ section {
     margin: 0;
 }
 .side-nav ul li {
-    padding-inline: 1em;
+    padding-inline: 2em;
 }
 .side-nav ul a {
     text-decoration: none;
-    margin: 2em 0; /* space between menu list */
+    margin: 3em 0; /* space between menu list */
     color: white;
     display: block; /* to covering all */
 }
 .side-nav ul li a:hover {
-    background-color: #575757;  /* change cursor style */
+    background-color: #474545;  /* change cursor style */
 }
 
-/* Responsivt anmälningsformulär */
+/* Om Konferensen menu */
+.section-container .about-conference {
+    margin-top: 3em;
+    margin-bottom: 3em;
+    margin-left: 6em;
+    margin-right: 6em;
+    padding: 2em;
+    font-size: large;
+    line-height: 3em;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: rgba(0, 0, 0, 0.075);
+} 
+/* Seminarier menu */
+.section-container .about-seminars {
+    font-size: large;
+    width: 30em;
+    text-align: center;
+    padding: 0.3em;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.section-container table {
+   width: 87%;
+   margin-left: 5em;
+   margin-right: 5em;
+   padding: 1em;
+   font-size: large;
+   background-image: url('img/paper.jpg');
+   background-repeat: no-repeat;
+   background-size: cover;
+   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.section-container .table-left {
+    width: 14em;
+    line-height: 3.5em;
+} 
+
+/* sign-up & food menu */
+section .img-food {
+    width: 50px; 
+    height: 50px;
+    padding: 5px;
+}
 form {
     max-width: 900px;
     margin: auto;
@@ -89,12 +151,19 @@ input, textarea, select {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-textarea {
+section .allergies-container {
+    padding: 2em;
+}
+section .allergies-container p {
+    margin: 2em;
+}
+textarea { /* Allergies text-box */
     width: 50em;
     height: 15em;
     border-radius: 0.5em;
+    background-color: ivory;
 }
-button {
+button {/* food allergies button */
     padding: 10px 15px;
     background-color: #4CAF50;
     color: white;
@@ -107,9 +176,9 @@ button:hover {
     background-color: #45a049;
 }
 
-
-/* Error Message */
+/* Anmälan & Error message & Checkbox */
 input:invalid, textarea:invalid {
+    background-color: ivory;
     border-color: red;
 }
 .error-message {
@@ -128,14 +197,17 @@ textarea:invalid + .error-message {
     margin: 1em;
     padding: 1em;
 }
-
+/* terms & conditions */
+label {
+    display: flex;
+    align-items: center; 
+    margin: 1em;
+} 
+/*input[type="checkbox"] {
+    margin-right: 2px; /* Adds space between the checkbox and the text 
+}*/
 
 /* Priser för biljetter */
-/*section .price {
-    background-color: pink;
-    margin: 0;
-    padding: 20px;
-}*/
 section .price-ticket {
     max-width: 800px;
     margin: 0 auto;
@@ -143,20 +215,21 @@ section .price-ticket {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+    color: #d9534f;
 }
 section h2 {
-    color: #333;
-    border-bottom: 2px solid #ccc; /* making underline */
-    padding-bottom: 10px;
-    margin-bottom: 20px;
+    /*padding-bottom: 10px;
+    margin-bottom: 20px;*/
 }
 .ticket {
     margin-bottom: 30px;
 }
-/*.ticket .span {
-    font-weight: bold;
-    color: #d9534f;
-}*/
+
+/* Contact */
+section a {
+    text-decoration: none;
+}
 
 /* Responsiv design */
 @media (max-width: 768px) {
