--- a/style.css
+++ b/style.css
@@ -29,7 +29,12 @@ header h1 {
     margin-top: 1em;
     padding: 0%;
     font-size: xxx-large;
+    transition: transform 0.5s ease; /* Smooth transition for the image */
 }
+header h1:hover {
+    transform: translateX(30px); /* Moves the text 30px to the right when hovered */
+    cursor: pointer;
+} 
 
 /* Body */
 body {
@@ -72,7 +77,7 @@ section {
     margin: 0;
 }
 .side-nav ul li {
-    padding-inline: 2em;
+    padding-inline: 1em;
 }
 .side-nav ul a {
     text-decoration: none;
@@ -83,13 +88,25 @@ section {
 .side-nav ul li a:hover {
     background-color: #474545;  /* change cursor style */
 }
+.side-nav img {
+    width: 55px;
+    height: 55px;
+    transition: transform 0.3s ease; /* Smooth transition for the image */
+}
+.side-nav img:hover {
+    transform: translateX(20px); /* Moves the image 20px to the right when hovered */
+} 
+.side-nav a {
+    padding: 0.3em;
+    margin: 0%;
+}
 
 /* Name of menu list */
 .section-container .title-menu { /* title menu container*/
     margin-top: 0%;
     
 	& > * { /* Select all direct child elements of the current parent element. */
-		width: 27em;
+		width: 32em;
 		height: 6em;
         padding: 0.5em;
         margin: 1em;
@@ -111,6 +128,9 @@ section {
 .title-name {
     transition-timing-function: ease-in;
 }
+.title-name:hover {
+    cursor: pointer;
+}
 .title-name h2 {
     padding: 1em;
 }
@@ -123,7 +143,7 @@ section {
 		background-color: rgb(81, 8, 124);
 	}
 	.title-name {
-		left: 77%;
+		left: 65%;
 	}
 }
 .grow {
@@ -145,8 +165,13 @@ section {
     padding: 2em;
     font-size: large;
     line-height: 3em;
-    box-shadow: rgba(199, 147, 4, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 0.5em;
 } 
+.section-container .about-conference:hover {
+    cursor: pointer;
+    background-color: #ff9d2e8f;
+}
 
 /* Seminarier menu */
 section p {
@@ -174,6 +199,13 @@ section p {
    box-shadow: rgba(250, 2, 2, 0.35) 0px 5px 15px;
    border-radius: 1em;
    text-align: start;
+}
+.section-container .seminarier-box2:hover {
+    cursor: pointer;
+    background-color: rgba(128, 128, 128, 0.171);
+}
+.seminarier-box1 h4 {
+    color: #fa060683;
 }
 
 /* Anmälan menu */
@@ -224,6 +256,7 @@ input, textarea, select {
 }
 .allergies-text1 img:hover {
     transform: translateX(20px); /* Moves the image 20px to the right when hovered */
+    cursor: pointer;
 }
 
 textarea { /* Allergies text-box */
@@ -245,6 +278,12 @@ button:hover {
 }
 .food-form button {
     margin: 2em;
+}
+.signup-container form {
+    line-height: 2em;
+}
+.allergies-text1 h3 {
+    color: red;
 }
 
 /* Anmälan & Error message & Checkbox */
@@ -286,10 +325,15 @@ section .price-form { /* Tickets price & details container */
     margin-bottom: 10px;
     box-shadow: rgba(217, 171, 221, 0.35) 0px -50px 36px -28px inset;
 }
-.price-ticket {
+.price-ticket, h3 {
     font-weight: bold;
     color: #f6a4a2;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    text-align: center;
+}
+.ticket:hover {
+    cursor: pointer;
+    background-color: #4b464a18;
 }
 .ticket-buying-container {
     width: 500px;
@@ -303,6 +347,7 @@ section .price-form { /* Tickets price & details container */
 }
 .checkbox-label { /* checkbox */
     display: flex;
+    justify-content: flex-start;
     align-items: center; 
     margin-bottom: 10px; /* Add spacing between each checkbox */
 }
@@ -336,7 +381,11 @@ input[type="submit"]:hover {
 .ticket-included img {
     width: 50px;
     height: 40px;
+    transition: transform 1s ease; /* Smooth transition for the image */
 }
+.ticket-included img:hover {
+    transform: translateX(20px); /* Moves the image 20px to the right when hovered */
+} 
 
 /* Contact */
 section .contact-container {
