--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
 /* * for all */
 * {
     box-sizing: border-box;
-    font-family: "Roboto Mono", monospace;
-    font-optical-sizing: auto;
+    font-family: "Roboto Mono", monospace;    
     font-weight: 500;
     font-style: normal; 
 }
@@ -32,7 +31,7 @@ header h1 {
     transition: transform 0.5s ease; /* Smooth transition for the image */
 }
 header h1:hover {
-    transform: translateX(30px); /* Moves the text 30px to the right when hovered */
+    transform: translateY(30px); /* Moves down the text 30px when hovered */
     cursor: pointer;
 } 
 
@@ -87,6 +86,7 @@ section {
 }
 .side-nav ul li a:hover {
     background-color: #474545;  /* change cursor style */
+    border-radius: 0.5em;
 }
 .side-nav img {
     width: 55px;
@@ -102,28 +102,25 @@ section {
 }
 
 /* Name of menu list */
-.section-container .title-menu { /* title menu container*/
+.section-container .title-menu > * { /* title menu container*/
+/* (>*) Select all direct child elements of the current parent element. */
     margin-top: 0%;
-    
-	& > * { /* Select all direct child elements of the current parent element. */
-		width: 32em;
-		height: 6em;
-        padding: 0.5em;
-        margin: 1em;
-        text-align: center;
-		/*border: 1px solid black;*/
-		background-color: rgb(222, 231, 248);
-		position: relative;
-		left: 0%;
-		transition: background-color 2.5s, left 4s;
-        background-color: black;
-        color: white;
-        border-radius: 1.5em;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: rgba(0, 0, 0, 0.767) 0px 5px 15px;
-	}
+	width: 32em;
+	height: 6em;
+    padding: 0.5em;
+    margin: 1em;
+    text-align: center;
+	background-color: rgb(222, 231, 248);
+	position: relative;
+	left: 0%;
+	transition: background-color 2.5s, left 4s;
+    background-color: black;
+    color: white;
+    border-radius: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.767) 0px 5px 15px;  
 }
 .title-name {
     transition-timing-function: ease-in;
@@ -138,13 +135,11 @@ section {
     width: 60px;
     height: 60px;
 }
-.title-menu:hover {
-	& > * {
-		background-color: rgb(81, 8, 124);
-	}
-	.title-name {
-		left: 65%;
-	}
+.title-menu:hover > * {
+	background-color: rgb(81, 8, 124);
+}
+.title-menu:hover .title-name {
+    left: 65%;
 }
 .grow {
     transform: scale(1.2); /* Making the element grow in size */
@@ -165,12 +160,13 @@ section {
     padding: 2em;
     font-size: large;
     line-height: 3em;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(243, 168, 5, 0.35) 5px 5px 15px;
     border-radius: 0.5em;
 } 
 .section-container .about-conference:hover {
     cursor: pointer;
-    background-color: #ff9d2e8f;
+    background-color: rgba(128, 128, 128, 0.164);
+    transform: translateY(15px); /* Moves the image 15px to go down when hovered */
 }
 
 /* Seminarier menu */
@@ -325,7 +321,7 @@ section .price-form { /* Tickets price & details container */
     margin-bottom: 10px;
     box-shadow: rgba(217, 171, 221, 0.35) 0px -50px 36px -28px inset;
 }
-.price-ticket, h3 {
+.price-ticket, .ticket-included h3 {
     font-weight: bold;
     color: #f6a4a2;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -342,18 +338,12 @@ section .price-form { /* Tickets price & details container */
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-.ticket-choices { /* checkbox */
-    margin-bottom: 20px;
-}
 .checkbox-label { /* checkbox */
-    display: flex;
+    /*display: flex;
     justify-content: flex-start;
-    align-items: center; 
+    align-items: center; */
     margin-bottom: 10px; /* Add spacing between each checkbox */
-}
-input[type="checkbox"] {
-    margin-left: 0; /* Space from the left side */
-    margin-right: 0; /* Space between checkbox and text */
+    background-color: pink;
 }
 input[type="text"], input[type="email"], select {
     width: 100%;
@@ -367,6 +357,7 @@ input[type="submit"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 1em;
 }
 input[type="submit"]:hover {
     background-color: #858080;
@@ -385,6 +376,7 @@ input[type="submit"]:hover {
 }
 .ticket-included img:hover {
     transform: translateX(20px); /* Moves the image 20px to the right when hovered */
+    cursor: pointer;
 } 
 
 /* Contact */
@@ -448,6 +440,13 @@ section li {
     box-shadow: rgba(194, 149, 3, 0.35) 0px 5px 15px;
     border-radius: 2em;
 }
+.person:hover {
+    background-color: rgba(128, 128, 128, 0.219);
+}
+.person img:hover {
+    transform: translateY(20px); /* Moves the image 20px to go down when hovered */
+    cursor: pointer;
+}
 .social-media { /* Social media container */
     display: grid;
     grid-template-columns: 1fr 1fr; /* Two columns */
@@ -458,11 +457,9 @@ section li {
     height: 40px;
 }
 
-
-
 /* Responsiv design */
 @media (max-width: 768px) {
-    header, main, footer {
+    header, main {
         padding: 10px;
     }
 }
