--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 header {
     color: white;
     margin: 0%;
-    padding: 20px;
     text-align: start; 
     flex-grow: 1;  /* header covers all space */ 
     width: 100%;
@@ -20,8 +19,8 @@ header {
     display: block;
     background-image: url('img/pacman-header.png');
     background-size: cover; /* Adjust image size to cover the element */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Prevent the image from repeating */
+    background-position:left; /* Center the image */
+    background-repeat: no-repeat; /* Image is not repeating */
 }
 header h1 {
     margin-left: 8.6em;
@@ -449,10 +448,27 @@ section li {
     height: 40px;
 }
 
-/* Responsiv design */
-@media (max-width: 768px) {
-    /* Adjust header and main padding */
-    header, main {
-        padding: 10px;
-    }
+
+@media only screen and (max-width: 600px) {
+/* Header */
+header {
+    color: white;
+    margin: 0px;
+    text-align: start; 
+    flex-grow: 1;  /* header covers all space */ 
+    width: 100%;
+    height: 250px;
+    display: block;
+    background-image: none;
+    
+}
+header h1 {
+    margin-left: 8.6em;
+    margin-top: 1em;
+    padding: 0%;
+    font-size: xxx-large;
+    display: inline-block;
+    
+}
+
 }
