--- a/css/style.css
+++ b/css/style.css
@@ -283,9 +283,9 @@ textarea:invalid + .error-message {
 .ticket {
     border-radius: 5px;
     line-height: 1.8em;
-    padding: 20px;
+    padding: 15px;
     margin: 25px;
-    margin-bottom: 10px;
+    margin: 20px 10px 20px 10px; /* top, right, bottom, left */
     box-shadow: rgba(217, 171, 221, 0.35) 0px -50px 36px -28px inset;
 }
 .price-ticket, .ticket-included h3 {
@@ -361,7 +361,7 @@ input[type="submit"]:hover {
     grid-column: 1;
     font-size: medium;
     padding: 10px; 
-    margin-left: 30px;
+    margin: 20px;
 }
 .organizer {
     grid-column: span 2; /* Spanning both columns */
