--- a/css/style.css
+++ b/css/style.css
@@ -471,55 +471,33 @@ footer fieldset {
 /* Responsiv design */
 @media (max-width: 768px) /* 786px for mobile screen */ {
 
-    /* Header */
-    header {
-        padding: 10px;
+    header, main, footer {
+        width: 90%;
         margin: 10px;
-        width: auto;
-        height: 150px;
     }
+    /* Header */
     header h1 {
         margin: 10px;
         font-size: 10vw; /* Larger font size for mobile screens */
     }
-    /* Main */
-    main {
-        /*flex-direction: column; /* column layout */
-        width: 80px;
-    } 
+   
     /* nav */  
     nav { /* left nav menu */
-        transform: translateX(-100%); /* Hide the left menu(nav) from screen */
-        width: 200px; /* Reduce width for mobile screens */
+        width: 90%; /* Reduce width for mobile screens */
         /*height: auto;
         /*height: 100%; /* Full hight menu */
         /*position: relative; /* Relative to stuck with main */
     }
-    nav.open {
-        transform: translateX(0); /* Show the left menu(nav) when open */
-    }
     nav ul li {
         font-size: large; 
         text-align: center;
-    }
-    .title-menu img {
-        width: 100px; 
-        height: auto; 
     }
     .section-container .about-conference,
     .section-container .about-seminars {
         font-size: medium; /* Smaller text size for mobile screens */
     }
     /* Om Konferense */
-    .about-web img { /* Reduce them for mobile screens */
-        margin-left: 1em; 
-        width: 40px; 
-        height: 40px;
-    }
     .section-container .about-conference { /* Reduce them for mobile screens */
-        margin-left: 1em; 
-        margin-right: 1em;
-        padding: 1em; 
         font-size: medium; 
     }
     /* Seminarier */
